reports/stellio/stellio-search-service/v1.4.1/README.md
# stellio/stellio-search-service:v1.4.1

![Summary](https://img.shields.io/badge/Severity-High-orange) 

Vulnarabilties found: 126

| Defcon1 | Critical | High | Medium | Low | Negligible|
|---------|----------|------|--------|-----|-----------|
| 0|0|5|69|43|9|

## Vulnerabilities

| Severity | Featurename | Version | CVE | Namespace | Description | Link | Fixed by |
|----------|-------------|---------|-----|-----------|-------------|------|----------|
|High|expat|2.2.9-1build1|CVE-2022-25235|ubuntu:20.04|xmltok_impl.c in Expat (aka libexpat) before 2.4.5 lacks certain validation of encoding, such as checks for whether a UTF-8 character is valid in a certain context.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-25235|2.2.9-1ubuntu0.2|
|High|cyrus-sasl2|2.1.27+dfsg-2|CVE-2022-24407|ubuntu:20.04|In Cyrus SASL 2.1.17 through 2.1.27 before 2.1.28, plugins/sql.c does not escape the password for a SQL INSERT or UPDATE statement.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-24407|2.1.27+dfsg-2ubuntu0.1|
|High|expat|2.2.9-1build1|CVE-2022-25236|ubuntu:20.04|xmlparse.c in Expat (aka libexpat) before 2.4.5 allows attackers to insert namespace-separator characters into namespace URIs.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-25236|2.2.9-1ubuntu0.2|
|High|openssl|1.1.1f-1ubuntu2.8|CVE-2023-0286|ubuntu:20.04|There is a type confusion vulnerability relating to X.400 address processing inside an X.509 GeneralName. X.400 addresses were parsed as an ASN1_STRING but the public structure definition for GENERAL_NAME incorrectly specified the type of the x400Address field as ASN1_TYPE. This field is subsequently interpreted by the OpenSSL function GENERAL_NAME_cmp as an ASN1_TYPE rather than an ASN1_STRING. When CRL checking is enabled (i.e. the application sets the X509_V_FLAG_CRL_CHECK flag), this vulnerability may allow an attacker to pass arbitrary pointers to a memcmp call, enabling them to read memory contents or enact a denial of service. In most cases, the attack requires the attacker to provide both the certificate chain and CRL, neither of which need to have a valid signature. If the attacker only controls one of these inputs, the other input must already contain an X.400 address as a CRL distribution point, which is uncommon. As such, this vulnerability is most likely to only affect applications which have implemented their own functionality for retrieving CRLs over a network.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2023-0286|1.1.1f-1ubuntu2.17|
|High|openssl|1.1.1f-1ubuntu2.8|CVE-2022-0778|ubuntu:20.04|The BN_mod_sqrt() function, which computes a modular square root, contains a bug that can cause it to loop forever for non-prime moduli. Internally this function is used when parsing certificates that contain elliptic curve public keys in compressed form or explicit elliptic curve parameters with a base point encoded in compressed form. It is possible to trigger the infinite loop by crafting a certificate that has invalid explicit curve parameters. Since certificate parsing happens prior to verification of the certificate signature, any process that parses an externally supplied certificate may thus be subject to a denial of service attack. The infinite loop can also be reached when parsing crafted private keys as they can contain explicit elliptic curve parameters. Thus vulnerable situations include: - TLS clients consuming server certificates - TLS servers consuming client certificates - Hosting providers taking certificates or private keys from customers - Certificate authorities parsing certification requests from subscribers - Anything else which parses ASN.1 elliptic curve parameters Also any other applications that use the BN_mod_sqrt() where the attacker can control the parameter values are vulnerable to this DoS issue. In the OpenSSL 1.0.2 version the public key is not parsed during initial parsing of the certificate which makes it slightly harder to trigger the infinite loop. However any operation which requires the public key from the certificate will trigger the infinite loop. In particular the attacker can use a self-signed certificate to trigger the loop during verification of the certificate signature. This issue affects OpenSSL versions 1.0.2, 1.1.1 and 3.0. It was addressed in the releases of 1.1.1n and 3.0.2 on the 15th March 2022. Fixed in OpenSSL 3.0.2 (Affected 3.0.0,3.0.1). Fixed in OpenSSL 1.1.1n (Affected 1.1.1-1.1.1m). Fixed in OpenSSL 1.0.2zd (Affected 1.0.2-1.0.2zc).|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-0778|1.1.1f-1ubuntu2.12|
|Medium|systemd|245.4-4ubuntu3.13|CVE-2021-3997|ubuntu:20.04|A flaw was found in systemd. An uncontrolled recursion in systemd-tmpfiles may lead to a denial of service at boot time when too many nested directories are created in /tmp.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2021-3997|245.4-4ubuntu3.15|
|Medium|systemd|245.4-4ubuntu3.13|CVE-2022-3821|ubuntu:20.04|An off-by-one Error issue was discovered in Systemd in format_timespan() function of time-util.c. An attacker could supply specific values for time and accuracy that leads to buffer overrun in format_timespan(), leading to a Denial of Service.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-3821|245.4-4ubuntu3.20|
|Medium|systemd|245.4-4ubuntu3.13|CVE-2022-4415|ubuntu:20.04|A vulnerability was found in systemd. This security flaw can cause a local information leak due to systemd-coredump not respecting the fs.suid_dumpable kernel setting.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-4415|245.4-4ubuntu3.20|
|Medium|openssl|1.1.1f-1ubuntu2.8|CVE-2022-4304|ubuntu:20.04|A timing based side channel exists in the OpenSSL RSA Decryption implementation which could be sufficient to recover a plaintext across a network in a Bleichenbacher style attack. To achieve a successful decryption an attacker would have to be able to send a very large number of trial messages for decryption. The vulnerability affects all RSA padding modes: PKCS#1 v1.5, RSA-OEAP and RSASVE. For example, in a TLS connection, RSA is commonly used by a client to send an encrypted pre-master secret to the server. An attacker that had observed a genuine connection between a client and a server could use this flaw to send trial messages to the server and record the time taken to process them. After a sufficiently large number of messages the attacker could recover the pre-master secret used for the original connection and thus be able to decrypt the application data sent over that connection.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-4304|1.1.1f-1ubuntu2.17|
|Medium|gnutls28|3.6.13-2ubuntu1.6|CVE-2023-0361|ubuntu:20.04|A timing side-channel in the handling of RSA ClientKeyExchange messages was discovered in GnuTLS. This side-channel can be sufficient to recover the key encrypted in the RSA ciphertext across a network in a Bleichenbacher style attack. To achieve a successful decryption the attacker would need to send a large amount of specially crafted messages to the vulnerable server. By recovering the secret from the ClientKeyExchange message, the attacker would be able to decrypt the application data exchanged over that connection.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2023-0361|3.6.13-2ubuntu1.8|
|Medium|openssl|1.1.1f-1ubuntu2.8|CVE-2022-2068|ubuntu:20.04|In addition to the c_rehash shell command injection identified in CVE-2022-1292, further circumstances where the c_rehash script does not properly sanitise shell metacharacters to prevent command injection were found by code review. When the CVE-2022-1292 was fixed it was not discovered that there are other places in the script where the file names of certificates being hashed were possibly passed to a command executed through the shell. This script is distributed by some operating systems in a manner where it is automatically executed. On such operating systems, an attacker could execute arbitrary commands with the privileges of the script. Use of the c_rehash script is considered obsolete and should be replaced by the OpenSSL rehash command line tool. Fixed in OpenSSL 3.0.4 (Affected 3.0.0,3.0.1,3.0.2,3.0.3). Fixed in OpenSSL 1.1.1p (Affected 1.1.1-1.1.1o). Fixed in OpenSSL 1.0.2zf (Affected 1.0.2-1.0.2ze).|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-2068|1.1.1f-1ubuntu2.15|
|Medium|openldap|2.4.49+dfsg-2ubuntu1.8|CVE-2022-29155|ubuntu:20.04|In OpenLDAP 2.x before 2.5.12 and 2.6.x before 2.6.2, a SQL injection vulnerability exists in the experimental back-sql backend to slapd, via a SQL statement within an LDAP query. This can occur during an LDAP search operation when the search filter is processed, due to a lack of proper escaping.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-29155|2.4.49+dfsg-2ubuntu1.9|
|Medium|openssl|1.1.1f-1ubuntu2.8|CVE-2022-1292|ubuntu:20.04|The c_rehash script does not properly sanitise shell metacharacters to prevent command injection. This script is distributed by some operating systems in a manner where it is automatically executed. On such operating systems, an attacker could execute arbitrary commands with the privileges of the script. Use of the c_rehash script is considered obsolete and should be replaced by the OpenSSL rehash command line tool. Fixed in OpenSSL 3.0.3 (Affected 3.0.0,3.0.1,3.0.2). Fixed in OpenSSL 1.1.1o (Affected 1.1.1-1.1.1n). Fixed in OpenSSL 1.0.2ze (Affected 1.0.2-1.0.2zd).|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-1292|1.1.1f-1ubuntu2.13|
|Medium|openssl|1.1.1f-1ubuntu2.8|CVE-2023-0215|ubuntu:20.04|The public API function BIO_new_NDEF is a helper function used for streaming ASN.1 data via a BIO. It is primarily used internally to OpenSSL to support the SMIME, CMS and PKCS7 streaming capabilities, but may also be called directly by end user applications. The function receives a BIO from the caller, prepends a new BIO_f_asn1 filter BIO onto the front of it to form a BIO chain, and then returns the new head of the BIO chain to the caller. Under certain conditions, for example if a CMS recipient public key is invalid, the new filter BIO is freed and the function returns a NULL result indicating a failure. However, in this case, the BIO chain is not properly cleaned up and the BIO passed by the caller still retains internal pointers to the previously freed filter BIO. If the caller then goes on to call BIO_pop() on the BIO then a use-after-free will occur. This will most likely result in a crash. This scenario occurs directly in the internal function B64_write_ASN1() which may cause BIO_new_NDEF() to be called and will subsequently call BIO_pop() on the BIO. This internal function is in turn called by the public API functions PEM_write_bio_ASN1_stream, PEM_write_bio_CMS_stream, PEM_write_bio_PKCS7_stream, SMIME_write_ASN1, SMIME_write_CMS and SMIME_write_PKCS7. Other public API functions that may be impacted by this include i2d_ASN1_bio_stream, BIO_new_CMS, BIO_new_PKCS7, i2d_CMS_bio_stream and i2d_PKCS7_bio_stream. The OpenSSL cms and smime command line applications are similarly affected.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2023-0215|1.1.1f-1ubuntu2.17|
|Medium|gnutls28|3.6.13-2ubuntu1.6|CVE-2022-2509|ubuntu:20.04|A vulnerability found in gnutls. This security flaw happens because of a double free error occurs during verification of pkcs7 signatures in gnutls_pkcs7_verify function.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-2509|3.6.13-2ubuntu1.7|
|Medium|expat|2.2.9-1build1|CVE-2021-46143|ubuntu:20.04|In doProlog in xmlparse.c in Expat (aka libexpat) before 2.4.3, an integer overflow exists for m_groupSize.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2021-46143|2.2.9-1ubuntu0.2|
|Medium|expat|2.2.9-1build1|CVE-2022-22823|ubuntu:20.04|build_model in xmlparse.c in Expat (aka libexpat) before 2.4.3 has an integer overflow.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-22823|2.2.9-1ubuntu0.2|
|Medium|expat|2.2.9-1build1|CVE-2022-23990|ubuntu:20.04|Expat (aka libexpat) before 2.4.4 has an integer overflow in the doProlog function.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-23990|2.2.9-1ubuntu0.2|
|Medium|e2fsprogs|1.45.5-2ubuntu1|CVE-2022-1304|ubuntu:20.04|An out-of-bounds read/write vulnerability was found in e2fsprogs 1.46.5. This issue leads to a segmentation fault and possibly arbitrary code execution via a specially crafted filesystem.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-1304|1.45.5-2ubuntu1.1|
|Medium|expat|2.2.9-1build1|CVE-2022-22825|ubuntu:20.04|lookup in xmlparse.c in Expat (aka libexpat) before 2.4.3 has an integer overflow.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-22825|2.2.9-1ubuntu0.2|
|Medium|glibc|2.31-0ubuntu9.2|CVE-2021-3999|ubuntu:20.04|A flaw was found in glibc. An off-by-one buffer overflow and underflow in getcwd() may lead to memory corruption when the size of the buffer is exactly 1. A local attacker who can control the input buffer and size passed to getcwd() in a setuid program could use this flaw to potentially execute arbitrary code and escalate their privileges on the system.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2021-3999|2.31-0ubuntu9.7|
|Medium|expat|2.2.9-1build1|CVE-2022-25314|ubuntu:20.04|In Expat (aka libexpat) before 2.4.5, there is an integer overflow in copyString.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-25314|2.2.9-1ubuntu0.4|
|Medium|expat|2.2.9-1build1|CVE-2022-40674|ubuntu:20.04|libexpat before 2.4.9 has a use-after-free in the doContent function in xmlparse.c.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-40674|2.2.9-1ubuntu0.5|
|Medium|expat|2.2.9-1build1|CVE-2022-23852|ubuntu:20.04|Expat (aka libexpat) before 2.4.4 has a signed integer overflow in XML_GetBuffer, for configurations with a nonzero XML_CONTEXT_BYTES.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-23852|2.2.9-1ubuntu0.2|
|Medium|perl|5.30.0-9ubuntu0.2|CVE-2020-16156|ubuntu:20.04|CPAN 2.28 allows Signature Verification Bypass.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2020-16156|5.30.0-9ubuntu0.3|
|Medium|perl|5.30.0-9ubuntu0.2|CVE-2023-31484|ubuntu:20.04|CPAN.pm before 2.35 does not verify TLS certificates when downloading distributions over HTTPS.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2023-31484|5.30.0-9ubuntu0.4|
|Medium|krb5|1.17-6ubuntu4.1|CVE-2021-37750|ubuntu:20.04|The Key Distribution Center (KDC) in MIT Kerberos 5 (aka krb5) before 1.18.5 and 1.19.x before 1.19.3 has a NULL pointer dereference in kdc/do_tgs_req.c via a FAST inner body that lacks a server field.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2021-37750|1.17-6ubuntu4.3|
|Medium|krb5|1.17-6ubuntu4.1|CVE-2022-42898|ubuntu:20.04|PAC parsing in MIT Kerberos 5 (aka krb5) before 1.19.4 and 1.20.x before 1.20.1 has integer overflows that may lead to remote code execution (in KDC, kadmind, or a GSS or Kerberos application server) on 32-bit platforms (which have a resultant heap-based buffer overflow), and cause a denial of service on other platforms. This occurs in krb5_pac_parse in lib/krb5/krb/pac.c. Heimdal before 7.7.1 has &quot;a similar bug.&quot;|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-42898|1.17-6ubuntu4.2|
|Medium|krb5|1.17-6ubuntu4.1|CVE-2021-36222|ubuntu:20.04|ec_verify in kdc/kdc_preauth_ec.c in the Key Distribution Center (KDC) in MIT Kerberos 5 (aka krb5) before 1.18.4 and 1.19.x before 1.19.2 allows remote attackers to cause a NULL pointer dereference and daemon crash. This occurs because a return value is not properly managed in a certain situation.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2021-36222|1.17-6ubuntu4.3|
|Medium|curl|7.68.0-1ubuntu2.7|CVE-2022-27774|ubuntu:20.04|An insufficiently protected credentials vulnerability exists in curl 4.9 to and include curl 7.82.0 are affected that could allow an attacker to extract credentials when follows HTTP(S) redirects is used with authentication could leak credentials to other services that exist on different protocols or port numbers.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-27774|7.68.0-1ubuntu2.10|
|Medium|expat|2.2.9-1build1|CVE-2022-22827|ubuntu:20.04|storeAtts in xmlparse.c in Expat (aka libexpat) before 2.4.3 has an integer overflow.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-22827|2.2.9-1ubuntu0.2|
|Medium|expat|2.2.9-1build1|CVE-2022-22822|ubuntu:20.04|addBinding in xmlparse.c in Expat (aka libexpat) before 2.4.3 has an integer overflow.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-22822|2.2.9-1ubuntu0.2|
|Medium|expat|2.2.9-1build1|CVE-2022-25313|ubuntu:20.04|In Expat (aka libexpat) before 2.4.5, an attacker can trigger stack exhaustion in build_model via a large nesting depth in the DTD element.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-25313|2.2.9-1ubuntu0.4|
|Medium|expat|2.2.9-1build1|CVE-2022-25315|ubuntu:20.04|In Expat (aka libexpat) before 2.4.5, there is an integer overflow in storeRawNames.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-25315|2.2.9-1ubuntu0.4|
|Medium|expat|2.2.9-1build1|CVE-2022-43680|ubuntu:20.04|In libexpat through 2.4.9, there is a use-after free caused by overeager destruction of a shared DTD in XML_ExternalEntityParserCreate in out-of-memory situations.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-43680|2.2.9-1ubuntu0.6|
|Medium|curl|7.68.0-1ubuntu2.7|CVE-2022-32221|ubuntu:20.04|When doing HTTP(S) transfers, libcurl might erroneously use the read callback (`CURLOPT_READFUNCTION`) to ask for data to send, even when the `CURLOPT_POSTFIELDS` option has been set, if the same handle previously was used to issue a `PUT` request which used that callback. This flaw may surprise the application and cause it to misbehave and either send off the wrong data or use memory after free or similar in the subsequent `POST` request. The problem exists in the logic for a reused handle when it is changed from a PUT to a POST.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-32221|7.68.0-1ubuntu2.14|
|Medium|expat|2.2.9-1build1|CVE-2022-22824|ubuntu:20.04|defineAttribute in xmlparse.c in Expat (aka libexpat) before 2.4.3 has an integer overflow.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-22824|2.2.9-1ubuntu0.2|
|Medium|curl|7.68.0-1ubuntu2.7|CVE-2023-27535|ubuntu:20.04|An authentication bypass vulnerability exists in libcurl &lt;8.0.0 in the FTP connection reuse feature that can result in wrong credentials being used during subsequent transfers. Previously created connections are kept in a connection pool for reuse if they match the current setup. However, certain FTP settings such as CURLOPT_FTP_ACCOUNT, CURLOPT_FTP_ALTERNATIVE_TO_USER, CURLOPT_FTP_SSL_CCC, and CURLOPT_USE_SSL were not included in the configuration match checks, causing them to match too easily. This could lead to libcurl using the wrong credentials when performing a transfer, potentially allowing unauthorized access to sensitive information.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2023-27535|7.68.0-1ubuntu2.18|
|Medium|curl|7.68.0-1ubuntu2.7|CVE-2022-22576|ubuntu:20.04|An improper authentication vulnerability exists in curl 7.33.0 to and including 7.82.0 which might allow reuse OAUTH2-authenticated connections without properly making sure that the connection was authenticated with the same credentials as set for this transfer. This affects SASL-enabled protocols: SMPTP(S), IMAP(S), POP3(S) and LDAP(S) (openldap only).|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-22576|7.68.0-1ubuntu2.10|
|Medium|expat|2.2.9-1build1|CVE-2022-22826|ubuntu:20.04|nextScaffoldPart in xmlparse.c in Expat (aka libexpat) before 2.4.3 has an integer overflow.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-22826|2.2.9-1ubuntu0.2|
|Medium|curl|7.68.0-1ubuntu2.7|CVE-2022-43552|ubuntu:20.04|A use after free vulnerability exists in curl &lt;7.87.0. Curl can be asked to *tunnel* virtually all protocols it supports through an HTTP proxy. HTTP proxies can (and often do) deny such tunnel operations. When getting denied to tunnel the specific protocols SMB or TELNET, curl would use a heap-allocated struct after it had been freed, in its transfer shutdown code path.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-43552|7.68.0-1ubuntu2.15|
|Medium|openssl|1.1.1f-1ubuntu2.8|CVE-2022-4450|ubuntu:20.04|The function PEM_read_bio_ex() reads a PEM file from a BIO and parses and decodes the &quot;name&quot; (e.g. &quot;CERTIFICATE&quot;), any header data and the payload data. If the function succeeds then the &quot;name_out&quot;, &quot;header&quot; and &quot;data&quot; arguments are populated with pointers to buffers containing the relevant decoded data. The caller is responsible for freeing those buffers. It is possible to construct a PEM file that results in 0 bytes of payload data. In this case PEM_read_bio_ex() will return a failure code but will populate the header argument with a pointer to a buffer that has already been freed. If the caller also frees this buffer then a double free will occur. This will most likely lead to a crash. This could be exploited by an attacker who has the ability to supply malicious PEM files for parsing to achieve a denial of service attack. The functions PEM_read_bio() and PEM_read() are simple wrappers around PEM_read_bio_ex() and therefore these functions are also directly affected. These functions are also called indirectly by a number of other OpenSSL functions including PEM_X509_INFO_read_bio_ex() and SSL_CTX_use_serverinfo_file() which are also vulnerable. Some OpenSSL internal uses of these functions are not vulnerable because the caller does not free the header argument if PEM_read_bio_ex() returns a failure code. These locations include the PEM_read_bio_TYPE() functions as well as the decoders introduced in OpenSSL 3.0. The OpenSSL asn1parse command line application is also impacted by this issue.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-4450|1.1.1f-1ubuntu2.17|
|Medium|curl|7.68.0-1ubuntu2.7|CVE-2023-23916|ubuntu:20.04|An allocation of resources without limits or throttling vulnerability exists in curl &lt;v7.88.0 based on the &quot;chained&quot; HTTP compression algorithms, meaning that a server response can be compressed multiple times and potentially with differentalgorithms. The number of acceptable &quot;links&quot; in this &quot;decompression chain&quot; wascapped, but the cap was implemented on a per-header basis allowing a maliciousserver to insert a virtually unlimited number of compression steps simply byusing many headers. The use of such a decompression chain could result in a &quot;malloc bomb&quot;, making curl end up spending enormous amounts of allocated heap memory, or trying to and returning out of memory errors.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2023-23916|7.68.0-1ubuntu2.16|
|Medium|libssh|0.9.3-2ubuntu2.2|CVE-2023-1667|ubuntu:20.04|A NULL pointer dereference was found In libssh during re-keying with algorithm guessing. This issue may allow an authenticated client to cause a denial of service.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2023-1667|0.9.3-2ubuntu2.3|
|Medium|curl|7.68.0-1ubuntu2.7|CVE-2022-32208|ubuntu:20.04|When curl &lt; 7.84.0 does FTP transfers secured by krb5, it handles message verification failures wrongly. This flaw makes it possible for a Man-In-The-Middle attack to go unnoticed and even allows it to inject data to the client.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-32208|7.68.0-1ubuntu2.12|
|Medium|curl|7.68.0-1ubuntu2.7|CVE-2022-27782|ubuntu:20.04|libcurl would reuse a previously created connection even when a TLS or SSHrelated option had been changed that should have prohibited reuse.libcurl keeps previously used connections in a connection pool for subsequenttransfers to reuse if one of them matches the setup. However, several TLS andSSH settings were left out from the configuration match checks, making themmatch too easily.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-27782|7.68.0-1ubuntu2.11|
|Medium|curl|7.68.0-1ubuntu2.7|CVE-2022-32206|ubuntu:20.04|curl &lt; 7.84.0 supports &quot;chained&quot; HTTP compression algorithms, meaning that a serverresponse can be compressed multiple times and potentially with different algorithms. The number of acceptable &quot;links&quot; in this &quot;decompression chain&quot; was unbounded, allowing a malicious server to insert a virtually unlimited number of compression steps.The use of such a decompression chain could result in a &quot;malloc bomb&quot;, makingcurl end up spending enormous amounts of allocated heap memory, or trying toand returning out of memory errors.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-32206|7.68.0-1ubuntu2.12|
|Medium|libssh|0.9.3-2ubuntu2.2|CVE-2023-2283|ubuntu:20.04|A vulnerability was found in libssh, where the authentication check of the connecting client can be bypassed in the`pki_verify_data_signature` function in memory allocation problems. This issue may happen if there is insufficient memory or the memory usage is limited. The problem is caused by the return value `rc,` which is initialized to SSH_ERROR and later rewritten to save the return value of the function call `pki_key_check_hash_compatible.` The value of the variable is not changed between this point and the cryptographic verification. Therefore any error between them calls `goto error` returning SSH_OK.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2023-2283|0.9.3-2ubuntu2.3|
|Medium|xz-utils|5.2.4-1ubuntu1|CVE-2022-1271|ubuntu:20.04|An arbitrary file write vulnerability was found in GNU gzip&#x27;s zgrep utility. When zgrep is applied on the attacker&#x27;s chosen file name (for example, a crafted file name), this can overwrite an attacker&#x27;s content to an arbitrary attacker-selected file. This flaw occurs due to insufficient validation when processing filenames with two or more newlines where selected content and the target file names are embedded in crafted multi-line file names. This flaw allows a remote, low privileged attacker to force zgrep to write arbitrary files on the system.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-1271|5.2.4-1ubuntu1.1|
|Medium|gzip|1.10-0ubuntu4|CVE-2022-1271|ubuntu:20.04|An arbitrary file write vulnerability was found in GNU gzip&#x27;s zgrep utility. When zgrep is applied on the attacker&#x27;s chosen file name (for example, a crafted file name), this can overwrite an attacker&#x27;s content to an arbitrary attacker-selected file. This flaw occurs due to insufficient validation when processing filenames with two or more newlines where selected content and the target file names are embedded in crafted multi-line file names. This flaw allows a remote, low privileged attacker to force zgrep to write arbitrary files on the system.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-1271|1.10-0ubuntu4.1|
|Medium|heimdal|7.7.0+dfsg-1ubuntu1|CVE-2021-44758|ubuntu:20.04|Heimdal before 7.7.1 allows attackers to cause a NULL pointer dereference in a SPNEGO acceptor via a preferred_mech_type of GSS_C_NO_OID and a nonzero initial_response value to send_accept.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2021-44758|7.7.0+dfsg-1ubuntu1.3|
|Medium|heimdal|7.7.0+dfsg-1ubuntu1|CVE-2022-3437|ubuntu:20.04|A heap-based buffer overflow vulnerability was found in Samba within the GSSAPI unwrap_des() and unwrap_des3() routines of Heimdal. The DES and Triple-DES decryption routines in the Heimdal GSSAPI library allow a length-limited write buffer overflow on malloc() allocated memory when presented with a maliciously small packet. This flaw allows a remote user to send specially crafted malicious data to the application, possibly resulting in a denial of service (DoS) attack.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-3437|7.7.0+dfsg-1ubuntu1.3|
|Medium|heimdal|7.7.0+dfsg-1ubuntu1|CVE-2022-44640|ubuntu:20.04|Heimdal before 7.7.1 allows remote attackers to execute arbitrary code because of an invalid free in the ASN.1 codec used by the Key Distribution Center (KDC).|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-44640|7.7.0+dfsg-1ubuntu1.3|
|Medium|heimdal|7.7.0+dfsg-1ubuntu1|CVE-2022-41916|ubuntu:20.04|Heimdal is an implementation of ASN.1/DER, PKIX, and Kerberos. Versions prior to 7.7.1 are vulnerable to a denial of service vulnerability in Heimdal&#x27;s PKI certificate validation library, affecting the KDC (via PKINIT) and kinit (via PKINIT), as well as any third-party applications using Heimdal&#x27;s libhx509. Users should upgrade to Heimdal 7.7.1 or 7.8. There are no known workarounds for this issue.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-41916|7.7.0+dfsg-1ubuntu1.2|
|Medium|tar|1.30+dfsg-7ubuntu0.20.04.1|CVE-2022-48303|ubuntu:20.04|GNU Tar through 1.34 has a one-byte out-of-bounds read that results in use of uninitialized memory for a conditional jump. Exploitation to change the flow of control has not been demonstrated. The issue occurs in from_header in list.c via a V7 archive in which mtime has approximately 11 whitespace characters.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-48303|1.30+dfsg-7ubuntu0.20.04.3|
|Medium|heimdal|7.7.0+dfsg-1ubuntu1|CVE-2022-42898|ubuntu:20.04|PAC parsing in MIT Kerberos 5 (aka krb5) before 1.19.4 and 1.20.x before 1.20.1 has integer overflows that may lead to remote code execution (in KDC, kadmind, or a GSS or Kerberos application server) on 32-bit platforms (which have a resultant heap-based buffer overflow), and cause a denial of service on other platforms. This occurs in krb5_pac_parse in lib/krb5/krb/pac.c. Heimdal before 7.7.1 has &quot;a similar bug.&quot;|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-42898|7.7.0+dfsg-1ubuntu1.3|
|Medium|heimdal|7.7.0+dfsg-1ubuntu1|CVE-2022-3116|ubuntu:20.04|The Heimdal Software Kerberos 5 implementation is vulnerable to a null pointer dereferance. An attacker with network access to an application that depends on the vulnerable code path can cause the application to crash.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-3116|7.7.0+dfsg-1ubuntu1.1|
|Medium|heimdal|7.7.0+dfsg-1ubuntu1|CVE-2022-45142|ubuntu:20.04|The fix for CVE-2022-3437 included changing memcmp to be constant time and a workaround for a compiler bug by adding &quot;!= 0&quot; comparisons to the result of memcmp. When these patches were backported to the heimdal-7.7.1 and heimdal-7.8.0 branches (and possibly other branches) a logic inversion sneaked in causing the validation of message integrity codes in gssapi/arcfour to be inverted.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-45142|7.7.0+dfsg-1ubuntu1.4|
|Medium|ca-certificates|20210119~20.04.2|CVE-2022-23491|ubuntu:20.04|Certifi is a curated collection of Root Certificates for validating the trustworthiness of SSL certificates while verifying the identity of TLS hosts. Certifi 2022.12.07 removes root certificates from &quot;TrustCor&quot; from the root store. These are in the process of being removed from Mozilla&#x27;s trust store. TrustCor&#x27;s root certificates are being removed pursuant to an investigation prompted by media reporting that TrustCor&#x27;s ownership also operated a business that produced spyware. Conclusions of Mozilla&#x27;s investigation can be found in the linked google group discussion.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-23491|20211016ubuntu0.20.04.1|
|Medium|freetype|2.10.1-2ubuntu0.1|CVE-2022-27404|ubuntu:20.04|FreeType commit 1e2eb65048f75c64b68708efed6ce904c31f3b2f was discovered to contain a heap buffer overflow via the function sfnt_init_face.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-27404|2.10.1-2ubuntu0.2|
|Medium|freetype|2.10.1-2ubuntu0.1|CVE-2022-31782|ubuntu:20.04|ftbench.c in FreeType Demo Programs through 2.12.1 has a heap-based buffer overflow.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-31782|2.10.1-2ubuntu0.2|
|Medium|openssl|1.1.1f-1ubuntu2.8|CVE-2023-2650|ubuntu:20.04|Issue summary: Processing some specially crafted ASN.1 object identifiers or data containing them may be very slow. Impact summary: Applications that use OBJ_obj2txt() directly, or use any of the OpenSSL subsystems OCSP, PKCS7/SMIME, CMS, CMP/CRMF or TS with no message size limit may experience notable to very long delays when processing those messages, which may lead to a Denial of Service. An OBJECT IDENTIFIER is composed of a series of numbers - sub-identifiers - most of which have no size limit. OBJ_obj2txt() may be used to translate an ASN.1 OBJECT IDENTIFIER given in DER encoding form (using the OpenSSL type ASN1_OBJECT) to its canonical numeric text form, which are the sub-identifiers of the OBJECT IDENTIFIER in decimal form, separated by periods. When one of the sub-identifiers in the OBJECT IDENTIFIER is very large (these are sizes that are seen as absurdly large, taking up tens or hundreds of KiBs), the translation to a decimal number in text may take a very long time. The time complexity is O(n^2) with &#x27;n&#x27; being the size of the sub-identifiers in bytes (*). With OpenSSL 3.0, support to fetch cryptographic algorithms using names / identifiers in string form was introduced. This includes using OBJECT IDENTIFIERs in canonical numeric text form as identifiers for fetching algorithms. Such OBJECT IDENTIFIERs may be received through the ASN.1 structure AlgorithmIdentifier, which is commonly used in multiple protocols to specify what cryptographic algorithm should be used to sign or verify, encrypt or decrypt, or digest passed data. Applications that call OBJ_obj2txt() directly with untrusted data are affected, with any version of OpenSSL. If the use is for the mere purpose of display, the severity is considered low. In OpenSSL 3.0 and newer, this affects the subsystems OCSP, PKCS7/SMIME, CMS, CMP/CRMF or TS. It also impacts anything that processes X.509 certificates, including simple things like verifying its signature. The impact on TLS is relatively low, because all versions of OpenSSL have a 100KiB limit on the peer&#x27;s certificate chain. Additionally, this only impacts clients, or servers that have explicitly enabled client authentication. In OpenSSL 1.1.1 and 1.0.2, this only affects displaying diverse objects, such as X.509 certificates. This is assumed to not happen in such a way that it would cause a Denial of Service, so these versions are considered not affected by this issue in such a way that it would be cause for concern, and the severity is therefore considered low.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2023-2650|1.1.1f-1ubuntu2.19|
|Medium|nghttp2|1.40.0-1build1|CVE-2020-11080|ubuntu:20.04|In nghttp2 before version 1.41.0, the overly large HTTP/2 SETTINGS frame payload causes denial of service. The proof of concept attack involves a malicious client constructing a SETTINGS frame with a length of 14,400 bytes (2400 individual settings entries) over and over again. The attack causes the CPU to spike at 100%. nghttp2 v1.41.0 fixes this vulnerability. There is a workaround to this vulnerability. Implement nghttp2_on_frame_recv_callback callback, and if received frame is SETTINGS frame and the number of settings entries are large (e.g., &gt; 32), then drop the connection.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2020-11080|1.40.0-1ubuntu0.1|
|Medium|zlib|1:1.2.11.dfsg-2ubuntu1.2|CVE-2018-25032|ubuntu:20.04|zlib before 1.2.12 allows memory corruption when deflating (i.e., when compressing) if the input has many distant matches.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2018-25032|1:1.2.11.dfsg-2ubuntu1.3|
|Medium|zlib|1:1.2.11.dfsg-2ubuntu1.2|CVE-2022-37434|ubuntu:20.04|zlib through 1.2.12 has a heap-based buffer over-read or buffer overflow in inflate in inflate.c via a large gzip header extra field. NOTE: only applications that call inflateGetHeader are affected. Some common applications bundle the affected zlib source code but may be unable to call inflateGetHeader (e.g., see the nodejs/node reference).|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-37434|1:1.2.11.dfsg-2ubuntu1.5|
|Medium|util-linux|2.34-0.1ubuntu9.1|CVE-2021-3995|ubuntu:20.04|A logic error was found in the libmount library of util-linux in the function that allows an unprivileged user to unmount a FUSE filesystem. This flaw allows an unprivileged local attacker to unmount FUSE filesystems that belong to certain other users who have a UID that is a prefix of the UID of the attacker in its string form. An attacker may use this flaw to cause a denial of service to applications that use the affected filesystems.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2021-3995|2.34-0.1ubuntu9.3|
|Medium|util-linux|2.34-0.1ubuntu9.1|CVE-2021-3996|ubuntu:20.04|A logic error was found in the libmount library of util-linux in the function that allows an unprivileged user to unmount a FUSE filesystem. This flaw allows a local user on a vulnerable system to unmount other users&#x27; filesystems that are either world-writable themselves (like /tmp) or mounted in a world-writable directory. An attacker may use this flaw to cause a denial of service to applications that use the affected filesystems.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2021-3996|2.34-0.1ubuntu9.3|
|Medium|sqlite3|3.31.1-4ubuntu0.2|CVE-2020-35525|ubuntu:20.04|In SQlite 3.31.1, a potential null pointer derreference was found in the INTERSEC query processing.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2020-35525|3.31.1-4ubuntu0.4|
|Medium|sqlite3|3.31.1-4ubuntu0.2|CVE-2020-35527|ubuntu:20.04|In SQLite 3.31.1, there is an out of bounds access problem through ALTER TABLE for views that have a nested FROM clause.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2020-35527|3.31.1-4ubuntu0.4|
|Medium|sqlite3|3.31.1-4ubuntu0.2|CVE-2022-35737|ubuntu:20.04|SQLite 1.0.12 through 3.39.x before 3.39.2 sometimes allows an array-bounds overflow if billions of bytes are used in a string argument to a C API.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-35737|3.31.1-4ubuntu0.5|
|Medium|ncurses|6.2-0ubuntu2|CVE-2023-29491|ubuntu:20.04|ncurses before 6.4 20230408, when used by a setuid application, allows local users to trigger security-relevant memory corruption via malformed data in a terminfo database file that is found in $HOME/.terminfo or reached via the TERMINFO or TERM environment variable.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2023-29491|6.2-0ubuntu2.1|
|Medium|dpkg|1.19.7ubuntu3|CVE-2022-1664|ubuntu:20.04|Dpkg::Source::Archive in dpkg, the Debian package management system, before version 1.21.8, 1.20.10, 1.19.8, 1.18.26 is prone to a directory traversal vulnerability. When extracting untrusted source packages in v2 and v3 source package formats that include a debian.tar, the in-place extraction can lead to directory traversal situations on specially crafted orig.tar and debian.tar tarballs.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-1664|1.19.7ubuntu3.2|
|Medium|gnupg2|2.2.19-3ubuntu2.1|CVE-2022-34903|ubuntu:20.04|GnuPG through 2.3.6, in unusual situations where an attacker possesses any secret-key information from a victim&#x27;s keyring and other constraints (e.g., use of GPGME) are met, allows signature forgery via injection into the status line.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-34903|2.2.19-3ubuntu2.2|
|Medium|openssl|1.1.1f-1ubuntu2.8|CVE-2022-2097|ubuntu:20.04|AES OCB mode for 32-bit x86 platforms using the AES-NI assembly optimised implementation will not encrypt the entirety of the data under some circumstances. This could reveal sixteen bytes of data that was preexisting in the memory that wasn&#x27;t written. In the special case of &quot;in place&quot; encryption, sixteen bytes of the plaintext would be revealed. Since OpenSSL does not support OCB based cipher suites for TLS and DTLS, they are both unaffected. Fixed in OpenSSL 3.0.5 (Affected 3.0.0-3.0.4). Fixed in OpenSSL 1.1.1q (Affected 1.1.1-1.1.1p).|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-2097|1.1.1f-1ubuntu2.16|
|Low|coreutils|8.30-3ubuntu2|CVE-2016-2781|ubuntu:20.04|chroot in GNU coreutils, when used with --userspec, allows local users to escape to the parent session via a crafted TIOCSTI ioctl call, which pushes characters to the terminal&#x27;s input buffer.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2016-2781||
|Low|pcre3|2:8.39-12build1|CVE-2019-20838|ubuntu:20.04|libpcre in PCRE before 8.43 allows a subject buffer over-read in JIT when UTF is disabled, and \X or \R has more than one fixed quantifier, a related issue to CVE-2019-20454.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2019-20838|2:8.39-12ubuntu0.1|
|Low|gnupg2|2.2.19-3ubuntu2.1|CVE-2022-3219|ubuntu:20.04|GnuPG can be made to spin on a relatively small input by (for example) crafting a public key with thousands of signatures attached, compressed down to just a few KB.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-3219||
|Low|libsepol|3.0-1|CVE-2021-36085|ubuntu:20.04|The CIL compiler in SELinux 3.2 has a use-after-free in __cil_verify_classperms (called from __verify_map_perm_classperms and hashtab_map).|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2021-36085|3.0-1ubuntu0.1|
|Low|libsepol|3.0-1|CVE-2021-36087|ubuntu:20.04|The CIL compiler in SELinux 3.2 has a heap-based buffer over-read in ebitmap_match_any (called indirectly from cil_check_neverallow). This occurs because there is sometimes a lack of checks for invalid statements in an optional block.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2021-36087|3.0-1ubuntu0.1|
|Low|libsepol|3.0-1|CVE-2021-36084|ubuntu:20.04|The CIL compiler in SELinux 3.2 has a use-after-free in __cil_verify_classperms (called from __cil_verify_classpermission and __cil_pre_verify_helper).|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2021-36084|3.0-1ubuntu0.1|
|Low|libsepol|3.0-1|CVE-2021-36086|ubuntu:20.04|The CIL compiler in SELinux 3.2 has a use-after-free in cil_reset_classpermission (called from cil_reset_classperms_set and cil_reset_classperms_list).|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2021-36086|3.0-1ubuntu0.1|
|Low|gnutls28|3.6.13-2ubuntu1.6|CVE-2021-4209|ubuntu:20.04|A NULL pointer dereference flaw was found in GnuTLS. As Nettle&#x27;s hash update functions internally call memcpy, providing zero-length input may cause undefined behavior. This flaw leads to a denial of service after authentication in rare circumstances.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2021-4209|3.6.13-2ubuntu1.7|
|Low|gmp|2:6.2.0+dfsg-4|CVE-2021-43618|ubuntu:20.04|GNU Multiple Precision Arithmetic Library (GMP) through 6.2.1 has an mpz/inp_raw.c integer overflow and resultant buffer overflow via crafted input, leading to a segmentation fault on 32-bit platforms.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2021-43618|2:6.2.0+dfsg-4ubuntu0.1|
|Low|shadow|1:4.8.1-1ubuntu5.20.04.1|CVE-2013-4235|ubuntu:20.04|shadow: TOCTOU (time-of-check time-of-use) race condition when copying and removing directory trees|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2013-4235||
|Low|shadow|1:4.8.1-1ubuntu5.20.04.1|CVE-2023-29383|ubuntu:20.04|In Shadow 4.13, it is possible to inject control characters into fields provided to the SUID program chfn (change finger). Although it is not possible to exploit this directly (e.g., adding a new user fails because \n is in the block list), it is possible to misrepresent the /etc/passwd file when viewed. Use of \r manipulations and Unicode characters to work around blocking of the : character make it possible to give the impression that a new user has been added. In other words, an adversary may be able to convince a system administrator to take the system offline (an indirect, social-engineered denial of service) by demonstrating that &quot;cat /etc/passwd&quot; shows a rogue user account.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2023-29383||
|Low|bash|5.0-6ubuntu1.1|CVE-2019-18276|ubuntu:20.04|An issue was discovered in disable_priv_mode in shell.c in GNU Bash through 5.0 patch 11. By default, if Bash is run with its effective UID not equal to its real UID, it will drop privileges by setting its effective UID to its real UID. However, it does so incorrectly. On Linux and other systems that support &quot;saved UID&quot; functionality, the saved UID is not dropped. An attacker with command execution in the shell can use &quot;enable -f&quot; for runtime loading of a new builtin, which can be a shared object that calls setuid() and therefore regains privileges. However, binaries running with an effective UID of 0 are unaffected.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2019-18276|5.0-6ubuntu1.2|
|Low|systemd|245.4-4ubuntu3.13|CVE-2023-26604|ubuntu:20.04|systemd before 247 does not adequately block local privilege escalation for some Sudo configurations, e.g., plausible sudoers files in which the &quot;systemctl status&quot; command may be executed. Specifically, systemd does not set LESSSECURE to 1, and thus other programs may be launched from the less program. This presents a substantial security risk when running systemctl from Sudo, because less executes as root when the terminal size is too small to show the complete systemctl output.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2023-26604||
|Low|openssl|1.1.1f-1ubuntu2.8|CVE-2023-0464|ubuntu:20.04|A security vulnerability has been identified in all supported versions of OpenSSL related to the verification of X.509 certificate chains that include policy constraints. Attackers may be able to exploit this vulnerability by creating a malicious certificate chain that triggers exponential use of computational resources, leading to a denial-of-service (DoS) attack on affected systems. Policy processing is disabled by default but can be enabled by passing the `-policy&#x27; argument to the command line utilities or by calling the `X509_VERIFY_PARAM_set1_policies()&#x27; function.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2023-0464|1.1.1f-1ubuntu2.18|
|Low|libpng1.6|1.6.37-2|CVE-2022-3857|ubuntu:20.04|A flaw was found in libpng 1.6.38. A crafted PNG image can lead to a segmentation fault and denial of service in png_setup_paeth_row() function.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-3857||
|Low|pcre2|10.34-7|CVE-2022-1587|ubuntu:20.04|An out-of-bounds read vulnerability was discovered in the PCRE2 library in the get_recurse_data_length() function of the pcre2_jit_compile.c file. This issue affects recursions in JIT-compiled regular expressions caused by duplicate data transfers.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-1587|10.34-7ubuntu0.1|
|Low|pcre2|10.34-7|CVE-2022-1586|ubuntu:20.04|An out-of-bounds read vulnerability was discovered in the PCRE2 library in the compile_xclass_matchingpath() function of the pcre2_jit_compile.c file. This involves a unicode property matching issue in JIT-compiled regular expressions. The issue occurs because the character was not fully read in case-less matching within JIT.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-1586|10.34-7ubuntu0.1|
|Low|freetype|2.10.1-2ubuntu0.1|CVE-2022-27406|ubuntu:20.04|FreeType commit 22a0cccb4d9d002f33c1ba7a4b36812c7d4f46b5 was discovered to contain a segmentation violation via the function FT_Request_Size.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-27406|2.10.1-2ubuntu0.2|
|Low|freetype|2.10.1-2ubuntu0.1|CVE-2022-27405|ubuntu:20.04|FreeType commit 53dfdcd8198d2b3201a23c4bad9190519ba918db was discovered to contain a segmentation violation via the function FNT_Size_Request.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-27405|2.10.1-2ubuntu0.2|
|Low|heimdal|7.7.0+dfsg-1ubuntu1|CVE-2021-3671|ubuntu:20.04|A null pointer de-reference was found in the way samba kerberos server handled missing sname in TGS-REQ (Ticket Granting Server - Request). An authenticated user could use this flaw to crash the samba server.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2021-3671|7.7.0+dfsg-1ubuntu1.1|
|Low|tar|1.30+dfsg-7ubuntu0.20.04.1|CVE-2021-20193|ubuntu:20.04|A flaw was found in the src/list.c of tar 1.33 and earlier. This flaw allows an attacker who can submit a crafted input file to tar to cause uncontrolled consumption of memory. The highest threat from this vulnerability is to system availability.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2021-20193|1.30+dfsg-7ubuntu0.20.04.2|
|Low|curl|7.68.0-1ubuntu2.7|CVE-2023-27533|ubuntu:20.04|A vulnerability in input validation exists in curl &lt;8.0 during communication using the TELNET protocol may allow an attacker to pass on maliciously crafted user name and &quot;telnet options&quot; during server negotiation. The lack of proper input scrubbing allows an attacker to send content or perform option negotiation without the application&#x27;s intent. This vulnerability could be exploited if an application allows user input, thereby enabling attackers to execute arbitrary code on the system.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2023-27533|7.68.0-1ubuntu2.18|
|Low|curl|7.68.0-1ubuntu2.7|CVE-2022-27776|ubuntu:20.04|A insufficiently protected credentials vulnerability in fixed in curl 7.83.0 might leak authentication or cookie header data on HTTP redirects to the same host but another port number.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-27776|7.68.0-1ubuntu2.10|
|Low|expat|2.2.9-1build1|CVE-2021-45960|ubuntu:20.04|In Expat (aka libexpat) before 2.4.3, a left shift by 29 (or more) places in the storeAtts function in xmlparse.c can lead to realloc misbehavior (e.g., allocating too few bytes, or only freeing memory).|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2021-45960|2.2.9-1ubuntu0.2|
|Low|curl|7.68.0-1ubuntu2.7|CVE-2022-27775|ubuntu:20.04|An information disclosure vulnerability exists in curl 7.65.0 to 7.82.0 are vulnerable that by using an IPv6 address that was in the connection pool but with a different zone id it could reuse a connection instead.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-27775|7.68.0-1ubuntu2.10|
|Low|curl|7.68.0-1ubuntu2.7|CVE-2022-35252|ubuntu:20.04|When curl is used to retrieve and parse cookies from a HTTP(S) server, itaccepts cookies using control codes that when later are sent back to a HTTPserver might make the server return 400 responses. Effectively allowing a&quot;sister site&quot; to deny service to all siblings.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-35252|7.68.0-1ubuntu2.13|
|Low|glibc|2.31-0ubuntu9.2|CVE-2021-35942|ubuntu:20.04|The wordexp function in the GNU C Library (aka glibc) through 2.33 may crash or read arbitrary memory in parse_param (in posix/wordexp.c) when called with an untrusted, crafted pattern, potentially resulting in a denial of service or disclosure of information. This occurs because atoi was used but strtoul should have been used to ensure correct calculations.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2021-35942|2.31-0ubuntu9.7|
|Low|curl|7.68.0-1ubuntu2.7|CVE-2023-28322|ubuntu:20.04|An information disclosure vulnerability exists in curl &lt;v8.1.0 when doing HTTP(S) transfers, libcurl might erroneously use the read callback (`CURLOPT_READFUNCTION`) to ask for data to send, even when the `CURLOPT_POSTFIELDS` option has been set, if the same handle previously wasused to issue a `PUT` request which used that callback. This flaw may surprise the application and cause it to misbehave and either send off the wrong data or use memory after free or similar in the second transfer. The problem exists in the logic for a reused handle when it is (expected to be) changed from a PUT to a POST.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2023-28322||
|Low|curl|7.68.0-1ubuntu2.7|CVE-2023-27534|ubuntu:20.04|A path traversal vulnerability exists in curl &lt;8.0.0 SFTP implementation causes the tilde (~) character to be wrongly replaced when used as a prefix in the first path element, in addition to its intended use as the first element to indicate a path relative to the user&#x27;s home directory. Attackers can exploit this flaw to bypass filtering or execute arbitrary code by crafting a path like /~2/foo while accessing a server with a specific user.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2023-27534|7.68.0-1ubuntu2.18|
|Low|curl|7.68.0-1ubuntu2.7|CVE-2023-27536|ubuntu:20.04|An authentication bypass vulnerability exists libcurl &lt;8.0.0 in the connection reuse feature which can reuse previously established connections with incorrect user permissions due to a failure to check for changes in the CURLOPT_GSSAPI_DELEGATION option. This vulnerability affects krb5/kerberos/negotiate/GSSAPI transfers and could potentially result in unauthorized access to sensitive information. The safest option is to not reuse connections if the CURLOPT_GSSAPI_DELEGATION option has been changed.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2023-27536|7.68.0-1ubuntu2.18|
|Low|curl|7.68.0-1ubuntu2.7|CVE-2023-27538|ubuntu:20.04|An authentication bypass vulnerability exists in libcurl prior to v8.0.0 where it reuses a previously established SSH connection despite the fact that an SSH option was modified, which should have prevented reuse. libcurl maintains a pool of previously used connections to reuse them for subsequent transfers if the configurations match. However, two SSH settings were omitted from the configuration check, allowing them to match easily, potentially leading to the reuse of an inappropriate connection.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2023-27538|7.68.0-1ubuntu2.18|
|Low|curl|7.68.0-1ubuntu2.7|CVE-2022-27781|ubuntu:20.04|libcurl provides the `CURLOPT_CERTINFO` option to allow applications torequest details to be returned about a server&#x27;s certificate chain.Due to an erroneous function, a malicious server could make libcurl built withNSS get stuck in a never-ending busy-loop when trying to retrieve thatinformation.  Due to an erroneous function, a malicious server could make libcurl built with NSS get stuck in a never-ending busy-loop when trying to retrieve that information.]|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-27781|7.68.0-1ubuntu2.11|
|Low|glibc|2.31-0ubuntu9.2|CVE-2019-25013|ubuntu:20.04|The iconv feature in the GNU C Library (aka glibc or libc6) through 2.32, when processing invalid multi-byte input sequences in the EUC-KR encoding, may have a buffer over-read.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2019-25013|2.31-0ubuntu9.7|
|Low|glibc|2.31-0ubuntu9.2|CVE-2020-6096|ubuntu:20.04|An exploitable signed comparison vulnerability exists in the ARMv7 memcpy() implementation of GNU glibc 2.30.9000. Calling memcpy() (on ARMv7 targets that utilize the GNU glibc implementation) with a negative value for the &#x27;num&#x27; parameter results in a signed comparison vulnerability. If an attacker underflows the &#x27;num&#x27; parameter to memcpy(), this vulnerability could lead to undefined behavior such as writing to out-of-bounds memory and potentially remote code execution. Furthermore, this memcpy() implementation allows for program execution to continue in scenarios where a segmentation fault or crash should have occurred. The dangers occur in that subsequent execution and iterations of this code will be executed with this corrupted data.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2020-6096|2.31-0ubuntu9.7|
|Low|openssl|1.1.1f-1ubuntu2.8|CVE-2023-0465|ubuntu:20.04|Applications that use a non-default option when verifying certificates may be vulnerable to an attack from a malicious CA to circumvent certain checks. Invalid certificate policies in leaf certificates are silently ignored by OpenSSL and other certificate policy checks are skipped for that certificate. A malicious CA could use this to deliberately assert invalid certificate policies in order to circumvent policy checking on the certificate altogether. Policy processing is disabled by default but can be enabled by passing the `-policy&#x27; argument to the command line utilities or by calling the `X509_VERIFY_PARAM_set1_policies()&#x27; function.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2023-0465|1.1.1f-1ubuntu2.18|
|Low|glibc|2.31-0ubuntu9.2|CVE-2020-29562|ubuntu:20.04|The iconv function in the GNU C Library (aka glibc or libc6) 2.30 to 2.32, when converting UCS4 text containing an irreversible character, fails an assertion in the code path and aborts the program, potentially resulting in a denial of service.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2020-29562|2.31-0ubuntu9.7|
|Low|glibc|2.31-0ubuntu9.2|CVE-2022-23219|ubuntu:20.04|The deprecated compatibility function clnt_create in the sunrpc module of the GNU C Library (aka glibc) through 2.34 copies its hostname argument on the stack without validating its length, which may result in a buffer overflow, potentially resulting in a denial of service or (if an application is not built with a stack protector enabled) arbitrary code execution.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-23219|2.31-0ubuntu9.7|
|Low|glibc|2.31-0ubuntu9.2|CVE-2020-27618|ubuntu:20.04|The iconv function in the GNU C Library (aka glibc or libc6) 2.32 and earlier, when processing invalid multi-byte input sequences in IBM1364, IBM1371, IBM1388, IBM1390, and IBM1399 encodings, fails to advance the input state, which could lead to an infinite loop in applications, resulting in a denial of service, a different vulnerability from CVE-2016-10228.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2020-27618|2.31-0ubuntu9.7|
|Low|glibc|2.31-0ubuntu9.2|CVE-2021-27645|ubuntu:20.04|The nameserver caching daemon (nscd) in the GNU C Library (aka glibc or libc6) 2.29 through 2.33, when processing a request for netgroup lookup, may crash due to a double-free, potentially resulting in degraded service or Denial of Service on the local system. This is related to netgroupcache.c.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2021-27645|2.31-0ubuntu9.7|
|Low|openldap|2.4.49+dfsg-2ubuntu1.8|CVE-2023-2953|ubuntu:20.04|A vulnerability was found in openldap. This security flaw causes a null pointer dereference in ber_memalloc_x() function.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2023-2953||
|Low|curl|7.68.0-1ubuntu2.7|CVE-2023-28321|ubuntu:20.04|An improper certificate validation vulnerability exists in curl &lt;v8.1.0 in the way it supports matching of wildcard patterns when listed as &quot;Subject Alternative Name&quot; in TLS server certificates. curl can be built to use its own name matching function for TLS rather than one provided by a TLS library. This private wildcard matching function would match IDN (International Domain Name) hosts incorrectly and could as a result accept patterns that otherwise should mismatch. IDN hostnames are converted to puny code before used for certificate checks. Puny coded names always start with `xn--` and should not be allowed to pattern match, but the wildcard check in curl could still check for `x*`, which would match even though the IDN name most likely contained nothing even resembling an `x`.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2023-28321||
|Low|glibc|2.31-0ubuntu9.2|CVE-2021-3326|ubuntu:20.04|The iconv function in the GNU C Library (aka glibc or libc6) 2.32 and earlier, when processing invalid input sequences in the ISO-2022-JP-3 encoding, fails an assertion in the code path and aborts the program, potentially resulting in a denial of service.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2021-3326|2.31-0ubuntu9.7|
|Low|glibc|2.31-0ubuntu9.2|CVE-2022-23218|ubuntu:20.04|The deprecated compatibility function svcunix_create in the sunrpc module of the GNU C Library (aka glibc) through 2.34 copies its path argument on the stack without validating its length, which may result in a buffer overflow, potentially resulting in a denial of service or (if an application is not built with a stack protector enabled) arbitrary code execution.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-23218|2.31-0ubuntu9.7|
|Negligible|openssl|1.1.1f-1ubuntu2.8|CVE-2023-0466|ubuntu:20.04|The function X509_VERIFY_PARAM_add0_policy() is documented to implicitly enable the certificate policy check when doing certificate verification. However the implementation of the function does not enable the check which allows certificates with invalid or incorrect policies to pass the certificate verification. As suddenly enabling the policy check could break existing deployments it was decided to keep the existing behavior of the X509_VERIFY_PARAM_add0_policy() function. Instead the applications that require OpenSSL to perform certificate policy check need to use X509_VERIFY_PARAM_set1_policies() or explicitly enable the policy check by calling X509_VERIFY_PARAM_set_flags() with the X509_V_FLAG_POLICY_CHECK flag argument. Certificate policy checks are disabled by default in OpenSSL and are not commonly used by applications.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2023-0466|1.1.1f-1ubuntu2.18|
|Negligible|glibc|2.31-0ubuntu9.2|CVE-2016-10228|ubuntu:20.04|The iconv program in the GNU C Library (aka glibc or libc6) 2.31 and earlier, when invoked with multiple suffixes in the destination encoding (TRANSLATE or IGNORE) along with the -c option, enters an infinite loop when processing invalid multi-byte input sequences, leading to a denial of service.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2016-10228|2.31-0ubuntu9.7|
|Negligible|pcre3|2:8.39-12build1|CVE-2017-11164|ubuntu:20.04|In PCRE 8.41, the OP_KETRMAX feature in the match function in pcre_exec.c allows stack exhaustion (uncontrolled recursion) when processing a crafted regular expression.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2017-11164||
|Negligible|pam|1.3.1-5ubuntu4.2|CVE-2022-28321|ubuntu:20.04|The Linux-PAM package before 1.5.2-6.1 for openSUSE Tumbleweed allows authentication bypass for SSH logins. The pam_access.so module doesn&#x27;t correctly restrict login if a user tries to connect from an IP address that is not resolvable via DNS. In such conditions, a user with denied access to a machine can still get access. NOTE: the relevance of this issue is largely limited to openSUSE Tumbleweed and openSUSE Factory; it does not affect Linux-PAM upstream.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-28321|1.3.1-5ubuntu4.4|
|Negligible|sqlite3|3.31.1-4ubuntu0.2|CVE-2021-36690|ubuntu:20.04|** DISPUTED ** A segmentation fault can occur in the sqlite3.exe command-line component of SQLite 3.36.0 via the idxGetTableInfo function when there is a crafted SQL query. NOTE: the vendor disputes the relevance of this report because a sqlite3.exe user already has full privileges (e.g., is intentionally allowed to execute commands). This report does NOT imply any problem in the SQLite library.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2021-36690|3.31.1-4ubuntu0.3|
|Negligible|ncurses|6.2-0ubuntu2|CVE-2021-39537|ubuntu:20.04|An issue was discovered in ncurses through v6.2-1. _nc_captoinfo in captoinfo.c has a heap-based buffer overflow.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2021-39537|6.2-0ubuntu2.1|
|Negligible|ncurses|6.2-0ubuntu2|CVE-2022-29458|ubuntu:20.04|ncurses 6.3 before patch 20220416 has an out-of-bounds read and segmentation violation in convert_strings in tinfo/read_entry.c in the terminfo library.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2022-29458|6.2-0ubuntu2.1|
|Negligible|pcre3|2:8.39-12build1|CVE-2020-14155|ubuntu:20.04|libpcre in PCRE before 8.44 allows an integer overflow via a large number after a (?C substring.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2020-14155|2:8.39-12ubuntu0.1|
|Negligible|glibc|2.31-0ubuntu9.2|CVE-2016-20013|ubuntu:20.04|sha256crypt and sha512crypt through 0.6 allow attackers to cause a denial of service (CPU consumption) because the algorithm&#x27;s runtime is proportional to the square of the length of the password.|http://people.ubuntu.com/~ubuntu-security/cve/CVE-2016-20013||
